hphp/hack/test/typecheck/concurrent/error/concurrent_type_mismatch.php.exp
File "concurrent_type_mismatch.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
File "concurrent_type_mismatch.php", line 6, characters 33-35:
Expected int
File "concurrent_type_mismatch.php", line 3, characters 34-38:
But got float
